--- a/src/app/components/add-restaurant/add-restaurant.component.html
+++ b/src/app/components/add-restaurant/add-restaurant.component.html
@@ -7,67 +7,32 @@
     />
     <form [formGroup]="restaurantForm" (ngSubmit)="onSubmit()">
       <div class="md-form">
-        <mdb-icon fas icon="tag" class="prefix grey-text"></mdb-icon>
-        <input
-          type="text"
-          id="name"
-          formControlName="name"
-          class="form-control"
-          mdbInput
-          mdbValidate
-          required
-        />
-        <label for="name">Restaurant Name</label>
-        <mdb-error *ngIf="name.invalid && (name.dirty || name.touched)">
-          Restaurant name is required
-        </mdb-error>
-        <mdb-success *ngIf="name.valid && (name.dirty || name.touched)"
-          >Valid
-        </mdb-success>
+        <div class="d-flex">
+          <mdb-icon fas icon="tag" class="prefix grey-text"></mdb-icon>
+          <input
+            type="text"
+            id="name"
+            formControlName="name"
+            placeholder="Enter your restaurant name"
+            class="form-control"
+            mdbInput
+            mdbValidate
+            required
+          />
+          <label for="name">Restaurant Name</label>
+          <mdb-error *ngIf="name.invalid && (name.dirty || name.touched)">
+            Restaurant name is required
+          </mdb-error>
+          <mdb-success *ngIf="name.valid && (name.dirty || name.touched)"
+            >Valid
+          </mdb-success>
+        </div>
       </div>
-      <div class="md-form">
-        <mdb-icon fas icon="city" class="prefix grey-text"></mdb-icon>
-        <input
-          type="text"
-          id="city"
-          formControlName="city"
-          class="form-control"
-          placeholder="Example: Montreal"
-          mdbInput
-          mdbValidate
-        />
-        <label for="city">City</label>
-        <mdb-error *ngIf="city.invalid && (city.dirty || city.touched)">
-          City is required and first letter must be capitalized
-        </mdb-error>
-        <mdb-success *ngIf="city.valid && (city.dirty || city.touched)">
-          Valid
-        </mdb-success>
-      </div>
-      <div class="md-form">
-        <mdb-icon fas icon="map-marker" class="prefix grey-text"></mdb-icon>
-        <input
-          type="text"
-          id="address"
-          placeholder="Example: 321 Main St., Montreal, QC, A1B 2C3"
-          formControlName="address"
-          class="form-control"
-          mdbInput
-          mdbValidate
-        />
-        <label for="address">Address</label>
-        <mdb-error
-          *ngIf="address.invalid && (address.dirty || address.touched)"
-        >
-          Address is required, must follow the format street-number street-name
-          postal-code
-        </mdb-error>
-        <mdb-success
-          *ngIf="address.valid && (address.dirty || address.touched)"
-        >
-          Valid
-        </mdb-success>
-      </div>
+      <app-address-autocomplete
+        (setAddress)="getAddress($event)"
+        adressType="establishment"
+      >
+      </app-address-autocomplete>
       <div class="md-form">
         <h4>Menus</h4>
       </div>
@@ -155,32 +120,50 @@
           </div>
         </div>
       </div>
-      <button type="button" mat-raised-button (click)="addMenu()">
+      <button
+        type="button"
+        mat-raised-button
+        [disabled]="maxMenuCountReached"
+        (click)="addMenu()"
+      >
         Add Menu
       </button>
       <div class="alert alert-danger" *ngIf="maxMenuCountReached">
         Failed to add menu, the maximum number of allowed menus per restaurant
-        is 4.
+        is {{ maxMenuCount }}.
       </div>
 
       <div class="md-form">
-        <mdb-icon fas icon="palette" class="prefix grey-text"></mdb-icon>
-        <input
-          type="text"
-          id="color"
-          formControlName="color"
-          class="form-control"
-          placeholder="An optional unique color for your menu viewer"
-          mdbInput
-          mdbValidate
-        />
-        <label for="color">Custom Color</label>
-        <mdb-error *ngIf="color.invalid && (color.dirty || color.touched)">
-          Colour must be in hex format, for example try #009688
-        </mdb-error>
-        <mdb-success *ngIf="color.valid && (color.dirty || color.touched)">
-          Valid
-        </mdb-success>
+        <div class="d-flex">
+          <div class="p-2 flex-fill">
+            <mdb-icon fas icon="palette" class="prefix grey-text"></mdb-icon>
+            <input
+              type="text"
+              id="color"
+              formControlName="color"
+              value="selectedColor"
+              class="form-control"
+              placeholder="Select a color for your menu viewer (optional)"
+              mdbInput
+            />
+            <label for="color">Custom Color</label>
+          </div>
+          <div>
+            <input
+              class="color-input"
+              readonly="readonly"
+              [style.background]="selectedColor"
+              [(colorPicker)]="selectedColor"
+              [cpOutputFormat]="'hex'"
+              [cpPosition]="'top'"
+              [cpPositionOffset]="'50%'"
+              [cpPositionRelativeToArrow]="true"
+              [cpAlphaChannel]="'disabled'"
+              [cpSaveClickOutside]="true"
+              [cpFallbackColor]="'#009688'"
+            />
+          </div>
+        </div>
       </div>
       <button
         type="submit"
