--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -1,43 +1,56 @@
 .home {
+  padding-top: 70px;
+  padding-right: 0;
+  padding-left: 0;
   position: relative;
   overflow: hidden;
   height: 100vh;
-  width: 100%;
   display: flex;
-  align-items: center;
-  justify-content: center;
-  background-color: #009688;
+}
+
+.home-overlay {
+  position: absolute;
+  overflow: hidden;
+  height: 100vh;
+  width: 100%;
+  background-color: #8be0d2;
+  opacity: 0.7;
+  z-index: 2;
 }
 
 .home-content {
-  position: relative;
-  z-index: 2;
   margin: 0 auto;
-  padding: 50px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  width: fit-content;
 }
 
-.home-content h1 {
+.home-right {
+  z-index: 3;
+  width: 100%;
+}
+
+.home-right-column {
+  height: 100vh;
+  align-items: center;
+  padding-top: 100px;
+  /* justify-content: center; */
+}
+
+.home-right h1 {
   font-weight: bold;
   color: white;
 }
 
-.home-content p {
-  text-align: center;
+.home-right p {
   font-size: 1.4em;
-  padding: 3px;
   color: white;
 }
 
-.home img {
-  position: absolute;
-  left: 0;
-  top: 0;
+.home-left img {
+  width: 600px;
   height: auto;
-  object-fit: cover;
-  opacity: 0.5;
+  position: absolute;
+  bottom: 0;
+}
+.home-left {
+  width: 100%;
+  position: relative;
 }
