--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,11 +1,28 @@
 <div class="home container-fluid">
-  <img src="./assets/img/home-background.jpg" />
-  <div class="home-content container">
-    <div class="d-flex flex-column">
-      <h1>Welcome to the BienMenu Admin Tool</h1>
-      <p>A space for you to manage your menus with just a few clicks</p>
-      <div *ngIf="!isLoggedIn">
-        <p>Login or Sign Up to access your restaurant data</p>
+  <!-- <img src="./assets/img/home-background.jpg" /> -->
+  <div class="home-overlay"></div>
+  <div class="home-content container d-flex">
+    <div class="p-2 home-left" [@fadeInOut]>
+      <img src="./assets/img/burger-girl.png" />
+    </div>
+    <div class="p-2 home-right" [@fadeInOut]>
+      <div class="home-right-column d-flex flex-column">
+        <img src="./assets/img/bienmenu-long-logo.png" />
+        <h1>Digital Menu Platform</h1>
+        <p>The easy way to manage your QR Code Menu</p>
+
+        <div *ngIf="!isLoggedIn">
+          <a
+            href="https://www.bien-menu.com/plans-pricing"
+            class="nav-link waves-light"
+            *ngIf="!isLoggedIn"
+            mdbWavesEffect
+          >
+            <button mat-raised-button class="btn">
+              Join Now
+            </button>
+          </a>
+        </div>
       </div>
     </div>
   </div>
