--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -7,14 +7,14 @@
     />
     <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
       <div class="form-group">
-        <label>Username</label>
+        <label>Username/Email</label>
         <input
           type="text"
           formControlName="username"
           class="form-control"
-          [ngClass]="{ 'is-invalid': submitted && f.username.errors }"
+          [ngClass]="{ 'is-invalid': isSubmitted && f.username.errors }"
         />
-        <div *ngIf="submitted && f.username.errors" class="invalid-feedback">
+        <div *ngIf="isSubmitted && f.username.errors" class="invalid-feedback">
           <div *ngIf="f.username.errors.required">Username is required</div>
         </div>
       </div>
@@ -24,18 +24,23 @@
           type="password"
           formControlName="password"
           class="form-control"
-          [ngClass]="{ 'is-invalid': submitted && f.password.errors }"
+          [ngClass]="{ 'is-invalid': isSubmitted && f.password.errors }"
         />
-        <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
+        <div *ngIf="isSubmitted && f.password.errors" class="invalid-feedback">
           <div *ngIf="f.password.errors.required">Password is required</div>
         </div>
       </div>
       <div class="form-group text-center">
-        <button mat-raised-button color="primary" class="btn">
+        <button
+          mat-raised-button
+          color="primary"
+          [disabled]="isSubmitted && !isLoginFailed"
+          class="btn"
+        >
           Login
         </button>
       </div>
-      <div class="alert alert-danger" *ngIf="submitted && isLoginFailed">
+      <div class="alert alert-danger" *ngIf="isSubmitted && isLoginFailed">
         Login failed.<br />{{ errorMessage }}
       </div>
     </form>
