--- a/src/app/components/menu-list/menu-list.component.html
+++ b/src/app/components/menu-list/menu-list.component.html
@@ -16,7 +16,7 @@
           (click)="openMenu(menu.filename)"
           class="menu-item list-group-item d-flex justify-content-between align-items-center"
         >
-          <div class="d-flex w-100 justify-content-between">
+          <div class="menu-item-content d-flex w-100 justify-content-between">
             <div class="d-flex flex-column">
               <h5 class="mb-1">{{ menu.name }}</h5>
               <div class="d-flex w-100">
