--- a/src/app/components/qr-code-viewer/qr-code-viewer.component.html
+++ b/src/app/components/qr-code-viewer/qr-code-viewer.component.html
@@ -1,25 +1,48 @@
 <div class="qr-code-viewer container-fluid">
-  <div class="qr-code-viewer-content card card-container">
-    <div #qrcodecard class="">
-      <img
-        src="./assets/img/qr-code-frame-img.jpg"
-        class="qr-code-frame profile-img-card"
-      />
-      <qrcode
-        class="qr-code"
-        [qrdata]="restaurantQrCode"
-        [width]="235"
-        [elementType]="'url'"
-        [errorCorrectionLevel]="'M'"
-      ></qrcode>
+  <div class="qr-code-viewer-content">
+    <div class="top-notice alert alert-info">
+      If you would like a custom QR code tailored specifically for your
+      restaurant and brand or if you would like us to print and deliver your QR
+      code cards t your restaurant, please contact our sales team at:
+      <a href="mailto:info@bienmenu.com">info@bienmenu.com</a> or give us a call
+      at:<br />
+      Canada: +1(514)755-9103<br />
+      US: +1(214)799-7058
     </div>
-    <button
-      mat-raised-button
-      type="button"
-      class="btn"
-      (click)="downloadQrCode()"
-    >
-      Download
-    </button>
+    <div class="d-flex">
+      <div class="card card-container p-2">
+        <div #qrcodecard>
+          <app-qrcode-card-svg [color]="restaurantColor"> </app-qrcode-card-svg>
+          <qrcode
+            class="qr-code"
+            [qrdata]="restaurantQrCode"
+            [width]="145"
+            [elementType]="'url'"
+            [errorCorrectionLevel]="'M'"
+          ></qrcode>
+        </div>
+      </div>
+      <div class="p-2 flex-grow-1">
+        <div class="d-flex flex-column options-container">
+          <div class="replication-select">
+            <select
+              class="browser-default custom-select"
+              (change)="onChange($event)"
+            >
+              <option selected value="1">1 x Page</option>
+              <option value="4">4 x Page</option>
+            </select>
+          </div>
+          <button
+            mat-raised-button
+            type="button"
+            class="download-btn btn"
+            (click)="downloadQrCode()"
+          >
+            Download
+          </button>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
