--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -3,7 +3,7 @@
   <div class="home-overlay"></div>
   <div class="home-content container d-flex">
     <div class="p-2 home-left" [@fadeInOut]>
-      <img src="./assets/img/burger-girl.png" />
+      <img src="./assets/img/burger-girl-2.png" />
     </div>
     <div class="p-2 home-right" [@fadeInOut]>
       <div class="home-right-column d-flex flex-column">
