--- a/src/app/components/restaurant-detail/restaurant-detail.component.css
+++ b/src/app/components/restaurant-detail/restaurant-detail.component.css
@@ -61,3 +61,15 @@
 .delete-btn {
   float: right;
 }
+
+.contact-tracing-toggle {
+  padding: 0 0 0 30px;
+}
+
+.tracing-btn {
+  padding-left: 30px;
+}
+
+.contact-tracing-setting {
+  align-items: center;
+}
